# IA_Projet_3A

./: .gitignore  README.md  READMETemplate.md  game_log.txt  pyproject.toml
src/SPMBros/: CMakeLists.txt  buildproject.sh  buildproject_from_python.sh  buildproject_from_python_mac.sh
src/SPMBros/docs/: smbdis.asm
src/SPMBros/source/: Constants.hpp  Main.cpp  server.cpp  server.h
src/SPMBros/source/SMB/: SMB.cpp  SMBEngine.cpp  SMBEngine.hpp
src/ia_projet_3a/: client.py  main.py  main_mac.py  methods.py  server.py
src/maps/: World11.json
src/mario_ai/: game.py  game_log.txt  json.nn  main.py  nn.json
src/mario_ai/ai/: genetic_algorithm.py  individual.py  methods.py  neat.py  neural_network.py  recurrent_neural_network.py  sequential_neural_network.py
src/mario_ai/game_manager/: actions.py  controls.py  environment.py  map_manager.py  simulation.py
src/mario_ai/maps/: World11.json
src/mario_ai/network/: data_parser.py  server.py
src/mario_ai/saves/: 044.json  nn copy.json
src/mario_ai/tests/: load_population.py  neat_mutation.py  neat_neural_network.py
src/mario_ai/utils/: logger.py  nn_save_manager.py  save.py
