[tool.poetry]
name = "ia-projet-3a"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "ia_projet_3a", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flex = "^6.14.1"
bison = "^0.1.3"
cmake = "^3.30.3"
boost = "^0.1"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
